--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+* {
+  font-size: 16px;
+}
+
 .App-logo {
   height: 40vmin;
 }
@@ -19,4 +23,54 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 100px auto;
+  max-width: 50%;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.genderRow {
+  display: flex;
+  flex-direction: row;
+  margin-left: auto;
+}
+
+.input {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.input > label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.input:not(:first-child) {
+  margin-left: 20px;
+}
+
+.submitButton,
+button {
+  margin-top: 20px;
+  margin-left: auto;
+  border-radius: 4px;
+  color: white;
+  background-color: slategray;
+  padding: 10px 30px;
 }
