--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,12 @@ button {
   background-color: slategray;
   padding: 10px 30px;
 }
+
+.alertWindow {
+  background-color: lightcoral;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 50px;
+  color: white;
+}
